# internal/service/gw/handler/http/middleware/auth/middleware.go
@@ -9,6 +9,7 @@ import (
 	"github.com/rendau/ruto/internal/service/gw/handler/http/middleware"
 	"github.com/rendau/ruto/internal/service/gw/handler/http/middleware/auth/api_key"
 	"github.com/rendau/ruto/internal/service/gw/handler/http/middleware/auth/basic"
+	"github.com/rendau/ruto/internal/service/gw/handler/http/middleware/auth/ip_validation"
 	"github.com/rendau/ruto/internal/service/gw/handler/http/middleware/auth/jwt"
 )
 
@@ -19,12 +20,12 @@ func New(endpoint *endpointModel.Endpoint) middleware.Middleware {
 		}
 	}
 
-	authorizers := buildAuthorizers(endpoint)
+	methodsAuthorizers := buildAuthorizers(endpoint)
 
 	return func(next http.Handler) http.Handler {
 		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-			for _, method := range authorizers {
-				if method.Authorize(r) {
+			for _, methodAuthorizers := range methodsAuthorizers {
+				if authorizeMethod(methodAuthorizers, r) {
 					next.ServeHTTP(w, r)
 					return
 				}
@@ -35,16 +36,32 @@ func New(endpoint *endpointModel.Endpoint) middleware.Middleware {
 	}
 }
 
-func buildAuthorizers(endpoint *endpointModel.Endpoint) []authorizerI {
-	return lo.FilterMap(endpoint.Auth.Methods, func(v endpointModel.AuthMethod, _ int) (authorizerI, bool) {
-		switch {
-		case v.Basic != nil:
-			return basic.New(v.Basic), true
-		case v.APIKey != nil:
-			return api_key.New(v.APIKey), true
-		case v.JWT != nil:
-			return jwt.New(v.JWT), true
+func buildAuthorizers(endpoint *endpointModel.Endpoint) [][]authorizerI {
+	return lo.FilterMap(endpoint.Auth.Methods, func(v endpointModel.AuthMethod, _ int) ([]authorizerI, bool) {
+		result := make([]authorizerI, 0, 4)
+
+		if v.Basic != nil {
+			result = append(result, basic.New(v.Basic))
 		}
-		return nil, false
+		if v.APIKey != nil {
+			result = append(result, api_key.New(v.APIKey))
+		}
+		if v.JWT != nil {
+			result = append(result, jwt.New(v.JWT))
+		}
+		if v.IPValidation != nil {
+			result = append(result, ip_validation.New(v.IPValidation))
+		}
+
+		return result, len(result) > 0
 	})
+}
+
+func authorizeMethod(authorizers []authorizerI, r *http.Request) bool {
+	for _, authorizer := range authorizers {
+		if !authorizer.Authorize(r) {
+			return false
+		}
+	}
+	return true
 }
